Refactors the mongoose connection process. connect.js exports a function that returns a promise that is the mongoose connection. Also includes two helper function in the test folder to connect to the test database and drop that database at the beginning of each test suite.

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "pretest": "eslint .",
-    "test": "MONGODB_URI=mongodb://localhost/gallery-test mocha"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
